refactor: apply OpenRewrite migration chain (6→21) + security + static analysis recipes
Phase 1 – Java migration (UpgradeToJava6/7/8 + Java8toJava11 + UpgradeToJava17/21):
  modified 14 files, modernised String.format→formatted(), diamond operators,
  collections API, etc.; reverted Java-21-only getFirst()/getLast() calls that
  require JDK 21 (project still targets JDK 17).

Phase 2 – Security (SecureRandom):
  Rng.java: java.util.Random → java.security.SecureRandom (fixes PREDICTABLE_RANDOM).

Phase 3 – Static analysis quality (EmptyBlock, DefaultComesLast,
  MultipleVariableDeclarations, MissingOverrideAnnotation, RemoveUnusedLocalVariables,
  InstanceOfPatternMatch, UnnecessaryParentheses, RemoveExtraSemicolons,
  UseDiamondOperator, ExplicitCharsetOnStringGetBytes, UseStandardCharset):
  modified 24 files.

Phase 4 – Additional quality (SimplifyBooleanExpression, SimplifyBooleanReturn,
  IsEmptyCallOnCollections, ReplaceLambdaWithMethodReference,
  UseStringIsEmptyRecipe): 7 more files.

Manual – SecurityManager removal (deprecated/removed in Java 17/21):
  Replaced `SecurityManager s = System.getSecurityManager(); group = s != null ?
  s.getThreadGroup() : Thread.currentThread().getThreadGroup()` with
  `group = Thread.currentThread().getThreadGroup()` across 5 files
  (TelnetListener, RemoteServerListener, ClientListener, RemoteCenterSession, Scheduler).

Tool version upgrades in pom.xml (main build only):
  rewrite-maven-plugin 5.34.1 → 5.44.0
  rewrite-migrate-java 2.21.0 → 2.26.1
  + rewrite-java-security 2.14.0 and rewrite-static-analysis 1.18.0 added